--- a/front-end/package.json
+++ b/front-end/package.json
@@ -12,7 +12,8 @@
     "bootstrap": "^5.3.3",
     "next": "15.0.3",
     "react": "19.0.0-rc-66855b96-20241106",
-    "react-dom": "19.0.0-rc-66855b96-20241106"
+    "react-dom": "19.0.0-rc-66855b96-20241106",
+    "sass": "^1.81.0"
   },
   "devDependencies": {
     "babel-eslint": "^10.1.0",
