--- a/front-end/package.json
+++ b/front-end/package.json
@@ -9,10 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.3.0",
     "bootstrap": "^5.3.3",
     "next": "15.0.3",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106",
+    "react-redux": "^9.1.2",
+    "redux": "^5.0.1",
     "sass": "^1.81.0"
   },
   "devDependencies": {
