--- a/front-end-ts/package.json
+++ b/front-end-ts/package.json
@@ -19,8 +19,9 @@
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.0.1",
-    "@types/node": "^20",
+    "@testing-library/user-event": "^14.5.2",
     "@types/jest": "^29.5.14",
+    "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
