--- a/front-end/package.json
+++ b/front-end/package.json
@@ -14,13 +14,14 @@
     "@types/react-dom": "^18.3.1",
     "bootstrap": "^5.3.3",
     "next": "15.0.3",
-    "react": "19.0.0-rc-66855b96-20241106",
-    "react-dom": "19.0.0-rc-66855b96-20241106",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-redux": "^9.1.2",
     "redux": "^5.0.1",
     "sass": "^1.81.0"
   },
   "devDependencies": {
+    "@types/node": "22.10.0",
     "babel-eslint": "^10.1.0",
     "eslint": "^8",
     "eslint-config-next": "15.0.3",
